<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/contactNameField"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/contactNameField"
        android:inputType="textPersonName"
        android:shadowColor="#ffffff"
        android:text="@string/nothing_entered"
        android:textColorHint="@android:color/holo_green_light"
        android:textColorLink="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="63dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:background="#ffffff"
        android:gravity="top|center"
        android:text="@string/addContactButton"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="29sp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/contactNameField"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailPassedOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/usernameRecieve"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/contactNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <ScrollView
        android:id="@+id/contactsContainer"
        android:layout_width="368dp"
        android:layout_height="384dp"
        android:layout_marginBottom="168dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNameField"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearScrolView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>